Fixed goal displayer layout on smaller screens

--- a/src/styles/GoalDisplayer.scss
+++ b/src/styles/GoalDisplayer.scss
@@ -66,7 +66,7 @@ $colors: (
     font-size: 0.85rem;
   }
 
-  .macros-numbers {
+  .macros-numbers.goals-set {
     flex-direction: column;
   }
 
